<resources>
    <string name="app_name">ToDoNotePad</string>
    <string name="todo">ToDo</string>
    <string name="to_do_home_icon">to_do_home_icon</string>
    <string name="notepad">Notepad</string>
    <string name="to_do_logo">to_do_logo</string>
    <string name="calendar">Calendar</string>
    <string name="add">Add</string>
    <string name="enter_the_title">Enter Title</string>
    <string name="enter_details">Note Details</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="to_do_ic">to_do_ic</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="our_team">Our Team</string>
    <string name="about_us">About Us</string>
</resources>